<resources>
    <string name="bugs_mail" translatable="false">nth.development@gmail.com</string>
    <string name="comments_mail" translatable="false">nth.development@gmail.com</string>
    <string name="db_name" translatable="false">Floramo</string>
    <string name="especie_info_tropicos" translatable="false">Tropicos ®</string>
    <string name="version_name" translatable="false">1.1.2.2</string>
    <string name="app_name">Flóramo</string>
    <string name="menu_title">Navegación</string>
    <string name="web_app_not_available">Lo siento, no hay un navegador configurado</string>
    <string name="gallery_app_not_available">Lo siento, no hay una galería configurada</string>
    <string name="camera_app_not_available">Lo siento, no hay una cámara configurada</string>
    <string name="encyclopedia_title">Ver especies</string>
    <string name="settings_title">Acerca de</string>
    <string name="camera_title">Cámara</string>
    <string name="captura_title">Nueva captura</string>
    <string name="bugs_title">Reportar errores</string>
    <string name="ruta_nueva">Ruta</string>
    <string name="ruta_nombre">Ruta</string>
    <string name="ruta_parar">Parar</string>
    <string name="ruta_plural">Rutas</string>
    <string name="ruta_ver_mapa">Mapa</string>
    <string name="ruta_lbl_distancia">Distancia</string>
    <string name="ruta_lbl_altura">Altitud</string>
    <string name="ruta_datos_guardados">Datos guardados</string>
    <string name="ruta_error_datos">Error al guardar los datos</string>
    <string name="ruta_nueva_foto">Nueva foto</string>
    <string name="ruta_lbl_foto">Fotos</string>
    <string name="mapa_especies">Especies</string>
    <string name="mapa_tipo">Tipo</string>
    <string name="mapa_limpiar">Limpiar</string>
    <string name="gallery_title">Galería</string>
    <string name="map_title">Mapa</string>
    <string name="tools_title">Herramientas</string>
    <string name="busqueda_title">Búsqueda</string>
    <string name="rutas_title">Rutas</string>
    <string name="notepad_title">Notas</string>
    <string name="nota_create_title">Nueva nota</string>
    <string name="nota_edit_title">Modificar nota</string>
    <string name="especie_info_title">Info. especie</string>
    <string-array name="options_array">
        <item>Inicio</item>
        <item>Mapa</item>
        <item>Ver especies</item>
        <item>Nueva captura</item>
        <item>Rutas</item>
        <item>Tropicos ®</item>
        
        
        <item>Herramientas</item>
        <item>Acerca de</item>
    </string-array>
    <string name="drawer_open">Abrir menú de navegación</string>
    <string name="drawer_close">Cerrar menú de navegación</string>
    <string name="search_btn_label">Búsqueda</string>
    <string name="help_help">Ayuda</string>
    <string name="help_captura">"Esta pantalla permite agregar nuevas especies o nuevas fotos a especies existentes."</string>
    <string name="help_enciclopedia">"Esta pantalla muestra todas las especies. Existen 2 vistas de la enciclopedia que se pueden cambiar con el botón en la parte inferior derecha de la pantalla:
La primera muestra una lista con 3 niveles de desplegables. El primer nivel corresponde a la familia, el segundo al género, el tercero a la especie.

La segunda es una lista de las especies donde se pueden ver el nombre científico y la familia. Están ordenadas por familia.
Al presionar el botón de la parte inferior izquierda se cambia entre 'Familia' y 'Nombre científico'. Esto cambia la manera de ordenar las especies.
El siguiente botón permite cambiar entre orden ascendente y descendente.
En esta segunda vista se muestra de un color diferente la letra de las especies ingresadas por el usuario.
Manteniendo presionada la especie se la puede eliminar.

En ambas vistas al presionar un registro de especie se muestra su información detallada."</string>
    <string name="help_notepad">"Esta pantalla permite escribir y guardar notas."</string>
    <string name="help_configuracion">"Esta pantalla permite ver la información del Parque Nacional Cajas, los créditos y la información de la aplicación.
También permite enviar sugerencias o comentarios y reportar errores."</string>
    <string name="help_busqueda">"Esta pantalla permite buscar las especies de la enciclopedia del teléfono utilizando filtros."</string>
    <string name="help_tools">-"Esta pantalla muestra la equivalencia entre centímetros y pulgadas.
También tiene un convertidor entre las 2 unidades: se puede escribir un valor en centímetros (izquierda) o pulgadas (derecha) y al presionar el botón naranja se mostrará el valor convertido a la otra unidad. La conversión se hace con el último valor ingresado.
Se muestra también una pequeña regla, con valores en cm a la izquierda en azul, y en pulg. a la derecha en negro. La precisión de la regla depende de su teléfono, pero el error debería ser mínimo.
El botón de la parte inferior de la pantalla muestra una brújula básica, así como las coordenadas y la  altitud a la que se encuentra el usuario."</string>
    <string name="help_map">"Esta pantalla muestra el mapa. En este se puede iniciar el registro de una ruta y se pueden ver todas las especies regstradas.
El botón 'Tipo' permite cambiar el tipo de mapa."</string>
    <string name="help_rutas">"Esta pantalla muestra la lista de las rutas registradas. Al presionar un registro se muestra la información detallada de esa ruta.
Manteniendo presionada una ruta se la puede eliminar.
En los detalles de la ruta uede eliminar una foto manteniéndola presionada."</string>
    <string name="help_tropicos">"Esta pantalla permite efectuar búsquedas directamente en el servidor de Tropicos ® utilizando filtros.
Se muestra un máximo de 10 resultados. En la lista, al presionar un registro se muestra su información detallada. Esta funcionalidad requiere una conexión a internet."</string>
    <string name="dialog_btn_cerrar">Cerrar</string>
    <string name="dialog_btn_anterior">Anterior</string>
    <string name="dialog_btn_siguiente">Siguiente</string>
    <string name="global_yes">Sí</string>
    <string name="global_no">No</string>
    <string name="global_ok">Aceptar</string>
    <string name="global_save">Guardar</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_placeHolder">placeHolder</string>
    <string name="global_min">min.</string>
    <string name="global_max">max.</string>
    <string name="global_color_none">-Ninguno-</string>
    <string name="global_color_blue">Azul</string>
    <string name="global_color_brown">Café</string>
    <string name="global_color_green">Verde</string>
    <string name="global_color_orange">Naranja</string>
    <string name="global_color_pink">Rosa</string>
    <string name="global_color_purple">Violeta</string>
    <string name="global_color_red">Rojo</string>
    <string name="global_color_white">Blanco</string>
    <string name="global_color_yellow">Amarillo</string>
    <string name="global_forma_vida_none">-Ninguna-</string>
    <string name="global_forma_vida_cushion">Almohadilla</string>
    <string name="global_forma_vida_shrub">Arbusto</string>
    <string name="global_forma_vida_herb">Hierba</string>
    <string name="global_forma_vida_grass">Pasto</string>
    <string name="global_forma_vida_rosette">Roseta</string>
    <string name="global_forma_vida_aquatic">Acuática</string>
    <string name="global_forma_vida_liana">Bejuco</string>
    <string name="global_forma_vida_tree">Árbol</string>
    <string name="global_error_no_connection">No se pudo conectar a Internet.</string>
    <string name="captura_comentarios_label">Comentarios</string>
    <string name="captura_nombre_familia_label">Familia</string>
    <string name="captura_nombre_genero_label">Género</string>
    <string name="captura_nombre_especie_label">Especie</string>
    <string name="captura_nombre_comun_label">Nombre común</string>
    <string name="captura_nombre_cientifico_label">Nombre científico</string>
    <string name="captura_color1_label">Color principal</string>
    <string name="captura_color2_label">Color secundario</string>
    <string name="captura_error_nombre_comun">Por favor, ingresa el nombre común de la especie</string>
    <string name="captura_error_nombre_familia">Por favor, ingresa la familia de la especie</string>
    <string name="captura_error_nombre_genero">Por favor, ingresa el género de la especie</string>
    <string name="captura_error_nombre_especie">Por favor, ingresa el nombre de la especie</string>
    <string name="captura_error_seleccion">Por favor, selecciona o toma una foto primero</string>
    <string name="captura_error_tag_gps">La foto no tiene información geográfica. </string>
    <string name="captura_success_tag_gps">La foto tiene información geográfica. </string>
    <string name="captura_error_gps_upload">La foto no tiene información geográfica.</string>
    <string name="captura_success">La foto ha sido guardada.</string>
    <string name="busqueda_nombre_cientifico">Nombre científico</string>
    <string name="busqueda_color">Color</string>
    <string name="busqueda_nombre">Familia, género o especie</string>
    <string name="busqueda_radio_and">Búsqueda AND</string>
    <string name="busqueda_radio_or">Búsqueda OR</string>
    <string name="busqueda_forma_vida">Forma de vida</string>
    <string name="busqueda_info_and">Búsqueda que concuerde con TODOS los siguientes parámetros:</string>
    <string name="busqueda_info_or">Búsqueda que concuerde con AL MENOS UNO de los siguientes parámetros:</string>
    <string name="busqueda_info_forma_vida">Especies con forma de vida %1$s</string>
    <string name="busqueda_info_color">Especies con color %1$s</string>
    <string name="busqueda_info_nombre">Especies con familia, género o especie que contenga %1$s</string>
    <string name="nota_create_title_label">Título</string>
    <string name="nota_create_contenido_label">Contenido</string>
    <string name="nota_create_dlg_delete_title">Eliminar nota</string>
    <string name="tropicos_name_id">NameId</string>
    <string name="tropicos">Name</string>
    <string name="tropicos_commonname">Common name</string>
    <string name="tropicos_family">Family</string>
    <string name="tropicos_instrucciones">Ingrese los parámetros de búsqueda</string>
    <string name="tropicos_buscar">Buscar en Tropicos ®</string>
    <string name="settings_acerca_paramo">Acerca del Páramo</string>
    <string name="settings_acerca_cajas">Acerca del Cajas</string>
    <string name="settings_formas_vida">Formas de vida</string>
    <string name="settings_about">Acerca de esta app</string>
    <string name="settings_bugs">Reportar errores</string>
    <string name="settings_comments">Comentarios o sugerencias</string>
    <string name="bugs_version">Versión de Android</string>
    <string name="bugs_device">Marca y modelo del teléfono</string>
    <string name="bugs_descripcion">Descripción del error (obligatorio)</string>
    <string name="bugs_send">Enviar</string>
    <string name="settings_creditos">Créditos</string>
    <string name="inicio_ver_nombres">Ver nombres</string>
    <string name="inicio_buscar_clave">Buscar clave</string>
    <string name="inicio_about_paramo">Acerca de Flóramo</string>
    <string name="tools_btn_gps">Ubicación</string>
    <string name="tools_conversion_titulo">Conversión pulgadas/cm</string>
    <string name="tools_label_conversion">"1 cm = 10 mm = 0.4 pulgadas
1 pulgada = 2.5 cm = 25 mm"</string>
    <string name="global_cm">cm</string>
    <string name="global_in">pulgadas</string>
    <string name="tools_label_cm_in">in = cm * 0.39370 = cm / 2.54</string>
    <string name="tools_label_in_cm">cm = in / 0.39370 = in * 2.54</string>
    <string name="tools_label_ruler">"La regla muestra centímetros en azul y pulgadas en negro.
Tenga en cuenta que la regla puede tener un pequeño error que depende de su teléfono."</string>
</resources>