<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal|top"
    android:padding="10dp"
    android:background="#fff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/ic_floramo"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_inicio_ver_nombres"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:layout_margin="5dp"

            android:drawableLeft="@drawable/ic_action_browse_names"
            android:text="@string/inicio_ver_nombres" />

        <Button
            android:id="@+id/btn_inicio_buscar"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:layout_margin="5dp"

            android:drawableLeft="@drawable/ic_inicio_action_search"
            android:text="@string/inicio_buscar_clave" />

        <Button
            android:id="@+id/btn_inicio_mapa"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:layout_margin="5dp"

            android:drawableLeft="@drawable/ic_inicio_action_map"
            android:text="@string/map_title" />

        <Button
            android:id="@+id/btn_inicio_about"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:layout_margin="5dp"

            android:drawableLeft="@drawable/ic_settings_about_paramo"
            android:text="@string/inicio_about_paramo" />
    </LinearLayout>
</LinearLayout>
