<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/bugs_version_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs_version"
        android:textStyle="bold"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/bugs_version_txt"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version de android aqui"

        android:layout_below="@+id/bugs_version_lbl"
        android:layout_alignLeft="@+id/bugs_version_lbl"
        android:layout_alignStart="@+id/bugs_version_lbl" />

    <TextView
        android:id="@+id/bugs_device_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs_device"
        android:textStyle="bold"
        android:layout_marginTop="15dp"

        android:layout_below="@+id/bugs_version_txt"
        android:layout_alignLeft="@+id/bugs_version_txt"
        android:layout_alignStart="@+id/bugs_version_txt" />

    <TextView
        android:id="@+id/bugs_device_txt"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marca y modelo del teléfono aqui"

        android:layout_below="@+id/bugs_device_lbl"
        android:layout_alignLeft="@+id/bugs_device_lbl"
        android:layout_alignStart="@+id/bugs_device_lbl" />

    <TextView
        android:id="@+id/bugs_descripcion_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs_descripcion"
        android:textStyle="bold"
        android:layout_marginTop="15dp"

        android:layout_below="@+id/bugs_device_txt"
        android:layout_alignLeft="@+id/bugs_device_txt"
        android:layout_alignStart="@+id/bugs_device_txt" />

    <EditText
        android:id="@+id/bugs_descripcion_txt"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="top"

        android:layout_below="@+id/bugs_descripcion_lbl"
        android:layout_alignLeft="@+id/bugs_descripcion_lbl"
        android:layout_alignStart="@+id/bugs_descripcion_lbl" />

    <Button
        android:id="@+id/bugs_send_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs_send"
        android:background="@drawable/button_green"
        android:drawableRight="@drawable/ic_action_send_now"
        android:layout_marginTop="15dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>